tests/test0151.exp
Parse error, unexpected := ( tests/test0151.ctr: 5 )
Key should always be followed by a property name!
